<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pricing"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pricing" />
        <item
            android:id="@+id/nav_pickupinfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pickupinfo" />
        <item
            android:id="@+id/nav_pickupperson"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_pickupperson" />


<!--    <item android:title="Communicate">-->
<!--        <menu>-->
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_contact" />
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_logout" />-->
<!--        </menu>-->
<!--    </item>-->
    </group>
</menu>
